# work-agent-os

./: .env.example  .gitignore  AGENT.MD  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
core/: config.py  database.py  deps.py  logging.py  monitor.py  ones_intake.py  ones_routing.py  pipeline.py  ports.py  projects.py  repositories.py  skill_registry.py
data/: models.yaml  projects.yaml
docs/: feishu-setup.md  main_orchestrator_project_agent_plan.md  next-phase.md  next_round_tech_debt.md
models/: db.py
scripts/: e2e_scenario.py  init_db.py  migrate_agent_runtime.py  migrate_agent_session.py  migrate_app_settings.py  migrate_pipeline.py  migrate_task_context.py  migrate_thread.py  reset_and_start.sh  restart_all_windows.bat
skills/: __init__.py
tests/: test_analysis_workspace.py  test_attachment_staging_flow.py  test_direct_project_context.py  test_dispatch_to_project.py  test_e2e_routing.py  test_feishu_card_builder.py  test_gitlab_issue_review_scripts.py  test_gitlab_review_publish_script.py  test_health.py  test_memory_consolidator.py  test_message_service.py  test_multimodal_attachments.py  test_multiturn_session.py  test_ones_cli_summary.py  test_ones_desc_local.py  test_ones_routing.py  test_orchestrator_tool_scopes.py  test_pipeline_routing.py  test_project_git_meta.py  test_project_insights.py  test_reply_enrichment.py  test_riot_log_triage_build_next_round.py  test_riot_log_triage_case_set.py  test_riot_log_triage_code_keyword_analyzer.py  test_riot_log_triage_replay_case.py  test_riot_log_triage_rerank_worker.py  test_triage_admin.py  (+5 more)
(+146 files in other folders)
