[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "core*", "models*"]

[project]
name = "work-agent-os"
version = "0.1.0"
description = "Personal Work Agent OS - local-first AI work assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.40.0",
    "openai>=1.68.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "lark-oapi>=1.4.0",
    "sse-starlette>=2.0.0",
    "claude-agent-sdk>=0.1.50",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: real Claude API integration tests (slow, requires ANTHROPIC_API_KEY)",
]
